samples/_failures_safe/1761533197_f4853b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34ffcab2.c: In function ‘main’:
./samples/SAFE/__tmp_34ffcab2.c:122:16: error: missing terminating " character
  122 |         printf("Matrix addition not possible (
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_34ffcab2.c:122:9: error: expected expression at end of input
  122 |         printf("Matrix addition not possible (
      |         ^~~~~~
./samples/SAFE/__tmp_34ffcab2.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34ffcab2.c:122:9: error: expected declaration or statement at end of input
